--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎉 Happy Birthday, [Name]! 🎂</h1>
-        <p>Wishing you a fantastic year ahead filled with joy, love, and laughter!</p>
+        <h1>🎉 Happy Birthday, Hsu Lae! 🎂</h1>
+        <p>Wishing you a fantastic year ahead filled with joy, love, and laughter! Thanks for always being there!</p>
         <button id="surpriseButton">Click for a Surprise! 🎁</button>
         <div id="surprise" class="hidden">
             <div class="surprise-content">
