--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <img src="birthday-surprise1.jpg" alt="Surprise Image 1">
                 <img src="birthday-surprise2.jpg" alt="Surprise Image 2">
                 <img src="birthday-surprise3.jpg" alt="Surprise Image 3">
-                <div class="message">We Love You! ❤️</div>
+                <div class="message">We Love You, our sweet little angel! ❤️</div>
             </div>
         </div>
     </div>
