added more pics

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,6 +104,7 @@
             from {
                 transform: translateY(0);
             }
+
             to {
                 transform: translateY(-10px);
             }
@@ -112,6 +114,7 @@
             from {
                 opacity: 0;
             }
+
             to {
                 opacity: 1;
             }
@@ -122,6 +125,7 @@
                 transform: scale(0.8);
                 opacity: 0;
             }
+
             to {
                 transform: scale(1);
                 opacity: 1;
@@ -129,17 +133,24 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>🎉 Happy Birthday, Hsu Lae! 🎂</h1>
         <p>Wishing you a fantastic year ahead filled with joy, love, and laughter! Thanks for always being there!</p>
-        <button id="surpriseButton">Click for a Surprise! 🎁</button>
+        <button id="surpriseButton">Click me! 🎁</button>
         <div id="surprise" class="hidden">
             <div class="surprise-content">
                 <img src="birthday-surprise1.jpg" alt="Surprise Image 1">
                 <img src="birthday-surprise2.jpg" alt="Surprise Image 2">
                 <img src="birthday-surprise3.jpg" alt="Surprise Image 3">
-                <div class="message">We Love You! ❤️</div>
+                <img src="birthday-surprise4.jpg" alt="Surprise Image 3">
+                <img src="birthday-surprise5.jpg" alt="Surprise Image 3">
+                <img src="birthday-surprise6.jpg" alt="Surprise Image 3">
+                <img src="birthday-surprise7.jpg" alt="Surprise Image 3">
+                <img src="birthday-surprise8.jpg" alt="Surprise Image 3">
+                <img src="birthday-surprise9.jpg" alt="Surprise Image 3">
+                <div class="message">We Love You, our sweet little angel! ❤️</div>
             </div>
         </div>
     </div>
@@ -153,4 +164,5 @@
         });
     </script>
 </body>
+
 </html>
